--- a/Responsive Web Design(NEW)/19 Personal Portfolio Webpage/index.html
+++ b/Responsive Web Design(NEW)/19 Personal Portfolio Webpage/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
-
+    <nav></nav>
+    <section id="welcome-section"></section>
+    <section></section>
   </body>
 </html>
