--- a/Responsive Web Design(NEW)/19 Personal Portfolio Webpage/index.html
+++ b/Responsive Web Design(NEW)/19 Personal Portfolio Webpage/index.html
@@ -8,7 +8,13 @@
   </head>
   <body>
     <nav></nav>
-    <section id="welcome-section"></section>
-    <section></section>
+    <section id="welcome-section">
+      <h1>Hi, My name is Stan</h1>
+    </section>
+    <section id="projects">
+      <section class="project-tile"></section>
+      <section class="project-tile"></section>
+      <section class="project-tile"></section>
+    </section>
   </body>
 </html>
