--- a/Responsive Web Design(NEW)/19 Personal Portfolio Webpage/index.html
+++ b/Responsive Web Design(NEW)/19 Personal Portfolio Webpage/index.html
@@ -7,14 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
-    <nav></nav>
+    <nav id="navbar">
+      <ul></ul>
+    </nav>
     <section id="welcome-section">
       <h1>Hi, My name is Stan</h1>
     </section>
     <section id="projects">
-      <section class="project-tile"></section>
-      <section class="project-tile"></section>
-      <section class="project-tile"></section>
+      <a class="project-tile"></a>
+      <a class="project-tile"></a>
+      <a class="project-tile"></a>
     </section>
   </body>
 </html>
