--- a/Responsive Web Design(NEW)/19 Personal Portfolio Webpage/index.html
+++ b/Responsive Web Design(NEW)/19 Personal Portfolio Webpage/index.html
@@ -14,6 +14,7 @@
       <h1>Hi, My name is Stan</h1>
     </section>
     <section id="projects">
+      <h1>My projects</h1>
       <a class="project-tile"></a>
       <a class="project-tile"></a>
       <a class="project-tile"></a>
