--- a/Responsive Web Design(NEW)/19 Personal Portfolio Webpage/index.html
+++ b/Responsive Web Design(NEW)/19 Personal Portfolio Webpage/index.html
@@ -8,16 +8,20 @@
   </head>
   <body>
     <nav id="navbar">
-      <ul></ul>
+      <ul>
+        <a>Introduction</a>
+        <a>Projects</a>
+        <a>Profile</a>
+      </ul>
     </nav>
     <section id="welcome-section">
       <h1>Hi, My name is Stan</h1>
     </section>
     <section id="projects">
       <h1>My projects</h1>
-      <a class="project-tile"></a>
-      <a class="project-tile"></a>
-      <a class="project-tile"></a>
+      <a class="project-tile">Project 1</a>
+      <a class="project-tile">Project 2</a>
+      <a class="project-tile">Project 3</a>
     </section>
   </body>
 </html>
