--- a/Responsive Web Design(NEW)/19 Personal Portfolio Webpage/index.html
+++ b/Responsive Web Design(NEW)/19 Personal Portfolio Webpage/index.html
@@ -9,8 +9,8 @@
   <body>
     <nav id="navbar">
       <ul>
-        <a>Introduction</a>
-        <a>Projects</a>
+        <a href="#welcome-section">Introduction</a>
+        <a href="#projects">Projects</a>
         <a>Profile</a>
       </ul>
     </nav>
@@ -22,6 +22,9 @@
       <a class="project-tile">Project 1</a>
       <a class="project-tile">Project 2</a>
       <a class="project-tile">Project 3</a>
+    </section>
+    <section>
+      <a id="profile-link">Profile</a>
     </section>
   </body>
 </html>
