--- a/Responsive Web Design(NEW)/19 Personal Portfolio Webpage/index.html
+++ b/Responsive Web Design(NEW)/19 Personal Portfolio Webpage/index.html
@@ -24,7 +24,7 @@
       <a class="project-tile">Project 3</a>
     </section>
     <section>
-      <a id="profile-link">Profile</a>
+      <a id="profile-link" target="_blank">Profile</a>
     </section>
   </body>
 </html>
